[gd_scene load_steps=11 format=2]

[ext_resource path="res://Yeryuzu/Agac/Agac.gd" type="Script" id=1]
[ext_resource path="res://Gölge.png" type="Texture" id=2]
[ext_resource path="res://Yeryuzu/Agac/ağaç.png" type="Texture" id=3]

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.460317, 0.777778 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 0.282353, 0.176471, 0.196078, 1 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
flag_disable_z = true
spread = 25.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 290.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 5.0
scale_random = 0.5
color_ramp = SubResource( 9 )

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0
height = 8.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Cevir/AgacUst:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -27 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cevir/AgacAlt:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -27 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Cevir/AgacUst:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Cevir/AgacAlt:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Cevir/AgacUst:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Cevir/Gölge:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 2 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Cevir/Gölge:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.26, 0.594 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Cevir/AgacUst:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Cevir/AgacAlt:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Cevir/Gölge:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Cevir/AgacUst:self_modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Cevir/Gölge:self_modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Cevir:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Vurulma"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Cevir/AgacUst:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cevir/AgacAlt:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Cevir:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 2, 1, -2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 2.5, 0 ), Vector2( 0, 0 ), Vector2( -2.5, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Yıkılma"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Cevir/AgacUst:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.6, 0.8, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0, 20.0, 38.0, 90.0, 85.0, 90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cevir/AgacUst:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -27 ), Vector2( 10, -30 ), Vector2( 16, -30 ), Vector2( 25, -25 ), Vector2( 40, -5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Cevir/Gölge:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 2 ), Vector2( 32, 2 ), Vector2( 46, 2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Cevir/Gölge:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.26, 0.594 ), Vector2( 1.5, 0.594 ), Vector2( 1.5, 0.8 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Cevir/AgacUst:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Cevir/Gölge:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Cevir/AgacUst:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Cevir:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 2, 1, -2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 2.5, 0 ), Vector2( 0, 0 ), Vector2( -2.5, 0 ), Vector2( 0, 0 ) ]
}

[node name="Agac" type="Node2D"]
script = ExtResource( 1 )

[node name="VurulmaEfek" type="Particles2D" parent="."]
position = Vector2( 0, -5 )
emitting = false
amount = 5
lifetime = 0.2
one_shot = true
explosiveness = 1.0
fixed_fps = 60
local_coords = false
process_material = SubResource( 8 )

[node name="Cevir" type="Position2D" parent="."]

[node name="Gölge" type="Sprite" parent="Cevir"]
position = Vector2( 0, 2 )
scale = Vector2( 1.26, 0.594 )
texture = ExtResource( 2 )

[node name="AgacAlt" type="Sprite" parent="Cevir"]
position = Vector2( 0, -27 )
texture = ExtResource( 3 )
hframes = 3
frame = 1

[node name="AgacUst" type="Sprite" parent="Cevir"]
position = Vector2( 0, -27 )
texture = ExtResource( 3 )
hframes = 3

[node name="AgacStatic" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AgacStatic"]
rotation = 1.5708
shape = SubResource( 1 )

[node name="AgacArea" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AgacArea"]
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/Vurulma = SubResource( 3 )
"anims/Yıkılma" = SubResource( 4 )

[node name="TimerYokOlma" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="area_entered" from="AgacArea" to="." method="_on_AgacArea_area_entered"]
[connection signal="timeout" from="TimerYokOlma" to="." method="_on_TimerYokOlma_timeout"]
